@@ -222,6 +222,53 @@ namespace DAnCE
     }
 
     template<>
+    bool get_satisfierproperty_value (const char *name,
+                            const ::Deployment::SatisfierProperties &properties,
+                            const char * &val)
+    {
+      DANCE_TRACE ("DAnCE::Utility::get_property_value<const char *>");
+
+      DANCE_DEBUG (9, (LM_TRACE, DLINFO
+                       ACE_TEXT("DAnCE::Utility::get_property_value<T> - ")
+                       ACE_TEXT("Finding property value for name '%C'\n"),
+                       name));
+
+      for (CORBA::ULong i = 0; i < properties.length (); ++i)
+        {
+          if (ACE_OS::strcmp (properties[i].name.in (), name) == 0)
+            {
+              DANCE_DEBUG (9,
+                          (LM_TRACE, DLINFO
+                          ACE_TEXT("DAnCE::Utility::get_property_value<T> - ")
+                          ACE_TEXT("Found property '%C'\n"), name));
+              if (properties[i].value >>= CORBA::Any::to_string (val, 0))
+                {
+                  DANCE_DEBUG (9,
+                              (LM_TRACE, DLINFO
+                               ACE_TEXT("DAnCE::Utility::get_property_value<T> - ")
+                               ACE_TEXT("Value is %C\n"), val));
+                  return true;
+                }
+              else
+                {
+                  DANCE_ERROR (1,
+                              (LM_WARNING, DLINFO
+                              ACE_TEXT("DAnCE::Utility::get_property_value<T> - ")
+                              ACE_TEXT("Failed to extract property value for %C\n"),
+                              name));
+                  return false;
+                }
+            }
+        }
+
+      DANCE_DEBUG (9, (LM_TRACE, DLINFO
+                       ACE_TEXT("DAnCE::Utility::get_property_value<T> - ")
+                       ACE_TEXT("Unable to find property named %C\n"), name));
+
+      return false;
+    }
+
+    template<>
     bool get_property_value (const char *name,
                              const ::Deployment::Properties &properties,
                              bool &val)
